tests/parsing/smtlib/v2.7/errors/010_exists_bad_var_2.smt2
(set-logic ALL)
(assert (exists (as) true))
